// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUIRoutes tests::Process and Tracing enabled Test Jobs management route 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-section-header"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe="true"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <h1
          class="pf-c-title pf-m-4xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Jobs Management
        </h1>
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section"
    data-ouia-component-type="jobs-management-page-section"
    data-ouia-safe="true"
  >
    <article
      class="pf-c-card Dev-ui__card-size"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div />
    </article>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled Test NoData route 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-fill"
    data-ouia-component-type="no-data"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-bullseye"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-8"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            No matches
          </h1>
          <div
            class="pf-c-empty-state__body"
          >
            No data to display
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="redirect-button"
            type="button"
          >
            Go to jobs management
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled Test PageNotFound route 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-not-found"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-bullseye"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--danger-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-9"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            404 Error: page not found
          </h1>
          <div
            class="pf-c-empty-state__body"
          >
            This page could not be found.
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="redirect-button"
            type="button"
          >
            Go to jobs management
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled forms list page test 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-section-header"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe="true"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <h1
          class="pf-c-title pf-m-4xl"
          data-ouia-component-id="OUIA-Generated-Title-4"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Forms
        </h1>
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section"
  >
    <article
      class="pf-c-card Dev-ui__card-size"
      data-ouia-component-id="OUIA-Generated-Card-5"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div />
    </article>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled jobs management page test 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-section-header"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe="true"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <h1
          class="pf-c-title pf-m-4xl"
          data-ouia-component-id="OUIA-Generated-Title-3"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Jobs Management
        </h1>
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section"
    data-ouia-component-type="jobs-management-page-section"
    data-ouia-safe="true"
  >
    <article
      class="pf-c-card Dev-ui__card-size"
      data-ouia-component-id="OUIA-Generated-Card-4"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div />
    </article>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled no data page test 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-fill"
    data-ouia-component-type="no-data"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-bullseye"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-6"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            No matches
          </h1>
          <div
            class="pf-c-empty-state__body"
          >
            No data to display
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="redirect-button"
            type="button"
          >
            Go to jobs management
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled page not found page test 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-not-found"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-bullseye"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--danger-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-7"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            404 Error: page not found
          </h1>
          <div
            class="pf-c-empty-state__body"
          >
            This page could not be found.
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="redirect-button"
            type="button"
          >
            Go to jobs management
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DevUIRoutes tests::Process and Tracing enabled processes test 1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
    data-ouia-component-type="page-section-header"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe="true"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <h1
          class="pf-c-title pf-m-4xl"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
           Instances
        </h1>
      </div>
    </div>
  </section>
  <div>
    <div
      class="pf-c-tabs pf-m-box pf-m-color-scheme--light-300"
      data-ouia-component-id="OUIA-Generated-Tabs-1"
      data-ouia-component-type="PF4/Tabs"
      data-ouia-safe="true"
      style="background: white;"
    >
      <ul
        class="pf-c-tabs__list"
        role="tablist"
      >
        <li
          class="pf-c-tabs__item pf-m-current"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-0-process-list-tab"
            aria-selected="true"
            class="pf-c-tabs__link"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-0-process-list-tab"
            role="tab"
            type="button"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              
               Instances
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-1-process-definitions-tab"
            aria-selected="false"
            class="pf-c-tabs__link"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-1-process-definitions-tab"
            role="tab"
            type="button"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              
               Definitions
            </span>
          </button>
        </li>
      </ul>
    </div>
    <section
      aria-labelledby="pf-tab-0-process-list-tab"
      class="pf-c-tab-content pf-m-light-300"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      id="pf-tab-section-0-process-list-tab"
      role="tabpanel"
      tabindex="0"
    >
      <section
        class="pf-c-page__main-section"
        data-ouia-component-type="process-list-page-section"
        data-ouia-safe="true"
      >
        <article
          class="pf-c-card Dev-ui__card-size"
          data-ouia-component-id="OUIA-Generated-Card-2"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id=""
        >
          <div />
        </article>
      </section>
    </section>
    <section
      aria-labelledby="pf-tab-1-process-definitions-tab"
      class="pf-c-tab-content pf-m-light-300"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      hidden=""
      id="pf-tab-section-1-process-definitions-tab"
      role="tabpanel"
      tabindex="0"
    >
      <section
        class="pf-c-page__main-section"
        data-ouia-component-type="process-definition-list-page-section"
        data-ouia-safe="true"
      >
        <article
          class="pf-c-card Dev-ui__card-size"
          data-ouia-component-id="OUIA-Generated-Card-3"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id=""
        >
          <div />
        </article>
      </section>
    </section>
  </div>
</div>
`;
